deploy: 9949aa57365fa0cf35acee7e7ad001be66f1e64a

--- a/genindex.html
+++ b/genindex.html
@@ -209,6 +209,8 @@
       <ul>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.accessList">(evmspec.structs.transaction.Transaction2930 property)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.accessList">(evmspec.structs.transaction.Transaction4844 property)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.accessList">(evmspec.structs.transaction.TransactionLegacy property)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionRLP.accessList">(evmspec.structs.transaction.TransactionRLP property)</a>
@@ -716,6 +718,8 @@
         <li><a href="source/evmspec.html#evmspec.TransactionReceipt.blobGasUsed">(evmspec.TransactionReceipt attribute)</a>
 </li>
       </ul></li>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.blobVersionedHashes">blobVersionedHashes (evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
       <li><a href="source/evmspec.structs.html#evmspec.structs.block.Block">Block (class in evmspec.structs.block)</a>
 </li>
       <li><a href="source/evmspec.html#evmspec.Log.block">block (evmspec.Log property)</a>
@@ -740,6 +744,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.block">(evmspec.structs.transaction.Transaction1559 property)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.block">(evmspec.structs.transaction.Transaction2930 property)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.block">(evmspec.structs.transaction.Transaction4844 property)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.block">(evmspec.structs.transaction.TransactionLegacy property)</a>
 </li>
@@ -784,6 +790,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.blockHash">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.blockHash">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.blockHash">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.blockHash">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -836,6 +844,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.blockNumber">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.blockNumber">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.blockNumber">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.blockNumber">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -972,6 +982,8 @@
 
       <ul>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.chainId">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.chainId">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.chainId">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -1683,6 +1695,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.gas">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.gas">(evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.gas">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionRLP.gas">(evmspec.structs.transaction.TransactionRLP attribute)</a>
@@ -1718,6 +1732,8 @@
 
       <ul>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.gasPrice">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.gasPrice">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.gasPrice">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -1766,6 +1782,8 @@
         <li><a href="source/evmspec.html#evmspec.TransactionReceipt.gasUsed">(evmspec.TransactionReceipt attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/evmspec.html#evmspec.ErigonBlockHeader.get">get() (evmspec.ErigonBlockHeader method)</a>
 
       <ul>
@@ -1835,6 +1853,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.get">(evmspec.structs.transaction.Transaction2930 method)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.get">(evmspec.structs.transaction.Transaction4844 method)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.get">(evmspec.structs.transaction.TransactionLegacy method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionRLP.get">(evmspec.structs.transaction.TransactionRLP method)</a>
@@ -1878,6 +1898,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.hash">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.hash">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.hash">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.hash">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -2034,6 +2056,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.input">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.input">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.input">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.input">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -2247,6 +2271,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.items">(evmspec.structs.transaction.Transaction2930 method)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.items">(evmspec.structs.transaction.Transaction4844 method)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.items">(evmspec.structs.transaction.TransactionLegacy method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionRLP.items">(evmspec.structs.transaction.TransactionRLP method)</a>
@@ -2366,6 +2392,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.keys">(evmspec.structs.transaction.Transaction1559 method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.keys">(evmspec.structs.transaction.Transaction2930 method)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.keys">(evmspec.structs.transaction.Transaction4844 method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.keys">(evmspec.structs.transaction.TransactionLegacy method)</a>
 </li>
@@ -2682,9 +2710,13 @@
         <li><a href="source/evmspec.data.html#evmspec.data.uints.uint96.max_value">(evmspec.data.uints.uint96 attribute)</a>
 </li>
       </ul></li>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.maxFeePerBlobGas">maxFeePerBlobGas (evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
       <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.maxFeePerGas">maxFeePerGas (evmspec.structs.transaction.Transaction1559 attribute)</a>
 
       <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.maxFeePerGas">(evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.Transaction1559.maxFeePerGas">(evmspec.structs.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.html#evmspec.Transaction1559.maxFeePerGas">(evmspec.Transaction1559 attribute)</a>
@@ -2693,6 +2725,8 @@
       <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.maxPriorityFeePerGas">maxPriorityFeePerGas (evmspec.structs.transaction.Transaction1559 attribute)</a>
 
       <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.maxPriorityFeePerGas">(evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.Transaction1559.maxPriorityFeePerGas">(evmspec.structs.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.html#evmspec.Transaction1559.maxPriorityFeePerGas">(evmspec.Transaction1559 attribute)</a>
@@ -2839,6 +2873,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.nonce">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.nonce">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.nonce">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.nonce">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -3011,6 +3047,8 @@
 
       <ul>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.r">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.r">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.r">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -3296,6 +3334,8 @@
       <ul>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.s">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.s">(evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.s">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionRLP.s">(evmspec.structs.transaction.TransactionRLP attribute)</a>
@@ -3331,6 +3371,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.sender">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.sender">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.sender">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.sender">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -3542,6 +3584,8 @@
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.to">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.to">(evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.to">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionRLP.to">(evmspec.structs.transaction.TransactionRLP attribute)</a>
@@ -3727,14 +3771,14 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.log.TinyLog.topics">(evmspec.structs.log.TinyLog attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/evmspec.structs.html#evmspec.structs.block.BaseBlock.totalDifficulty">totalDifficulty (evmspec.structs.block.BaseBlock attribute)</a>
 
       <ul>
         <li><a href="source/evmspec.structs.html#evmspec.structs.block.MinedBlock.totalDifficulty">(evmspec.structs.block.MinedBlock attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/evmspec.structs.trace.html#evmspec.structs.trace.call.Trace">Trace (class in evmspec.structs.trace.call)</a>
 
       <ul>
@@ -3771,6 +3815,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930">(class in evmspec.structs.transaction)</a>
 </li>
       </ul></li>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844">Transaction4844 (class in evmspec.structs.transaction)</a>
+</li>
       <li><a href="source/evmspec.data.html#evmspec.data.TransactionHash">TransactionHash (class in evmspec.data)</a>
 </li>
       <li><a href="source/evmspec.html#evmspec.FullTransactionReceipt.transactionHash">transactionHash (evmspec.FullTransactionReceipt attribute)</a>
@@ -3825,6 +3871,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.transactionIndex">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.transactionIndex">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.transactionIndex">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.transactionIndex">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -3949,6 +3997,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.type">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.type">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.type">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.type">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -4090,6 +4140,8 @@
       <ul>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.v">(evmspec.structs.transaction.Transaction2930 attribute)</a>
 </li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.v">(evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.v">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionRLP.v">(evmspec.structs.transaction.TransactionRLP attribute)</a>
@@ -4125,6 +4177,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.value">(evmspec.structs.transaction.Transaction1559 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.value">(evmspec.structs.transaction.Transaction2930 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.value">(evmspec.structs.transaction.Transaction4844 attribute)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.value">(evmspec.structs.transaction.TransactionLegacy attribute)</a>
 </li>
@@ -4215,6 +4269,8 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.values">(evmspec.structs.transaction.Transaction1559 method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction2930.values">(evmspec.structs.transaction.Transaction2930 method)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.values">(evmspec.structs.transaction.Transaction4844 method)</a>
 </li>
         <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.TransactionLegacy.values">(evmspec.structs.transaction.TransactionLegacy method)</a>
 </li>
