--- a/_modules/evmspec/data/uints.html
+++ b/_modules/evmspec/data/uints.html
@@ -125,7 +125,7 @@
 <span class="sd">            &gt;&gt;&gt; uint256(HexBytes(&#39;0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF&#39;))</span>
 <span class="sd">            uint256(115792089237316195423570985008687907853269984665640564039457584007913129639935)</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="n">new</span> <span class="o">=</span> <span class="nb">super</span><span class="p">()</span><span class="o">.</span><span class="fm">__new__</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">v</span><span class="o">.</span><span class="n">hex</span><span class="p">()</span> <span class="k">if</span> <span class="n">v</span> <span class="k">else</span> <span class="s2">&quot;0x0&quot;</span><span class="p">,</span> <span class="mi">16</span><span class="p">)</span>
+        <span class="n">new</span> <span class="o">=</span> <span class="n">__int_new__</span><span class="p">(</span><span class="bp">cls</span><span class="p">,</span> <span class="n">v</span><span class="o">.</span><span class="n">hex</span><span class="p">()</span> <span class="k">if</span> <span class="n">v</span> <span class="k">else</span> <span class="s2">&quot;0x0&quot;</span><span class="p">,</span> <span class="mi">16</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">new</span> <span class="o">&lt;</span> <span class="bp">cls</span><span class="o">.</span><span class="n">min_value</span><span class="p">:</span>
             <span class="k">raise</span> <span class="ne">ValueError</span><span class="p">(</span>
                 <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">v</span><span class="si">!r}</span><span class="s2"> (</span><span class="si">{</span><span class="n">new</span><span class="si">}</span><span class="s2">) is smaller than </span><span class="si">{</span><span class="bp">cls</span><span class="o">.</span><span class="vm">__name__</span><span class="si">}</span><span class="s2"> min value </span><span class="si">{</span><span class="bp">cls</span><span class="o">.</span><span class="n">min_value</span><span class="si">}</span><span class="s2">&quot;</span>
@@ -211,6 +211,8 @@
     <span class="nb">setattr</span><span class="p">(</span><span class="n">sys</span><span class="o">.</span><span class="n">modules</span><span class="p">[</span><span class="vm">__name__</span><span class="p">],</span> <span class="n">cls_name</span><span class="p">,</span> <span class="n">new_cls</span><span class="p">)</span>
 
 <span class="n">__all__</span> <span class="o">=</span> <span class="p">[</span><span class="sa">f</span><span class="s2">&quot;uint</span><span class="si">{</span><span class="nb">bytes</span><span class="o">*</span><span class="mi">8</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">for</span> <span class="nb">bytes</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">32</span><span class="p">)]</span>
+
+<span class="n">__int_new__</span> <span class="o">=</span> <span class="nb">int</span><span class="o">.</span><span class="fm">__new__</span>
 </pre></div>
 
            </div>
