deploy: 18af471e80a17bbf44e63314a359c694d76a9a9d

--- a/_modules/evmspec/structs/transaction.html
+++ b/_modules/evmspec/structs/transaction.html
@@ -290,7 +290,10 @@
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;The maximum fee per gas set in the transaction.&quot;&quot;&quot;</span>
 
     <span class="n">maxPriorityFeePerGas</span><span class="p">:</span> <span class="n">Wei</span>
-<span class="w">    </span><span class="sd">&quot;&quot;&quot;The maximum priority gas fee set in the transaction.&quot;&quot;&quot;</span></div>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;The maximum priority gas fee set in the transaction.&quot;&quot;&quot;</span>
+
+    <span class="n">yParity</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">uint</span><span class="p">]</span> <span class="o">=</span> <span class="n">UNSET</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;The yParity for the transaction.&quot;&quot;&quot;</span></div>
 
 
 <div class="viewcode-block" id="Transaction4844"><a class="viewcode-back" href="../../../source/evmspec.structs.html#evmspec.Transaction4844">[docs]</a><span class="k">class</span> <span class="nc">Transaction4844</span><span class="p">(</span><span class="n">Transaction1559</span><span class="p">,</span> <span class="n">tag</span><span class="o">=</span><span class="s2">&quot;0x3&quot;</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">kw_only</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">repr_omit_defaults</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
