--- a/genindex.html
+++ b/genindex.html
@@ -94,6 +94,7 @@
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
+ | <a href="#Y"><strong>Y</strong></a>
  | <a href="#Z"><strong>Z</strong></a>
  
 </div>
@@ -4309,6 +4310,22 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/evmspec.structs.html#evmspec.structs.block.ShanghaiCapellaBlock.withdrawals">withdrawals (evmspec.structs.block.ShanghaiCapellaBlock property)</a>
 </li>
+  </ul></td>
+</tr></table>
+
+<h2 id="Y">Y</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction1559.yParity">yParity (evmspec.structs.transaction.Transaction1559 attribute)</a>
+
+      <ul>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.transaction.Transaction4844.yParity">(evmspec.structs.transaction.Transaction4844 attribute)</a>
+</li>
+        <li><a href="source/evmspec.structs.html#evmspec.structs.Transaction1559.yParity">(evmspec.structs.Transaction1559 attribute)</a>
+</li>
+        <li><a href="source/evmspec.html#evmspec.Transaction1559.yParity">(evmspec.Transaction1559 attribute)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
